// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar demo examples basic 1`] = `
.glamor-4 > *,
[data-glamor-4] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr,
.glamor-0 > span,
[data-glamor-0] > span {
  font-size: 1.125em;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr {
  text-decoration: none;
}

.glamor-0 > img,
[data-glamor-0] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-0 > [role="img"],
[data-glamor-0] > [role="img"] {
  fill: #fff;
}

.glamor-1,
[data-glamor-1] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-1 *,
[data-glamor-1] *,
.glamor-1 *::before,
[data-glamor-1] *::before,
.glamor-1 *::after,
[data-glamor-1] *::after {
  box-sizing: inherit;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr,
.glamor-1 > span,
[data-glamor-1] > span {
  font-size: 1.125em;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr {
  text-decoration: none;
}

.glamor-1 > img,
[data-glamor-1] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-1 > [role="img"],
[data-glamor-1] > [role="img"] {
  fill: #fff;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3 > abbr,
[data-glamor-3] > abbr {
  text-decoration: none;
}

.glamor-3 > img,
[data-glamor-3] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-3 > [role="img"],
[data-glamor-3] > [role="img"] {
  fill: #fff;
}

.glamor-2,
[data-glamor-2] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Avatar": [Function],
            "DemoLayout": [Function],
            "IconCloud": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-4"
              >
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={true}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-0"
                    >
                      <img
                        alt="Allison"
                        src="/images/avatar.svg"
                      />
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-1"
                    >
                      <abbr
                        title="Allison"
                      >
                        A
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar>
                  <Avatar
                    icon={
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      />
                    }
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-3"
                    >
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      >
                        <Icon
                          rtl={false}
                          size="1.5em"
                          title="cloud"
                        >
                          <glamorous(svg)
                            aria-hidden={null}
                            aria-labelledby="icon-title-icon-1"
                            role="img"
                            rtl={false}
                            size="1.5em"
                            viewBox="0 0 24 24"
                          >
                            <svg
                              aria-hidden={null}
                              aria-labelledby="icon-title-icon-1"
                              className="glamor-2"
                              role="img"
                              viewBox="0 0 24 24"
                            >
                              <title
                                id="icon-title-icon-1"
                              >
                                cloud
                              </title>
                              <g>
                                <path
                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                />
                              </g>
                            </svg>
                          </glamorous(svg)>
                        </Icon>
                      </IconCloud>
                    </span>
                  </Avatar>
                </Avatar>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Avatar demo examples colors 1`] = `
.glamor-16 > *,
[data-glamor-16] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr,
.glamor-0 > span,
[data-glamor-0] > span {
  font-size: 1.125em;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr {
  text-decoration: none;
}

.glamor-0 > img,
[data-glamor-0] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-0 > [role="img"],
[data-glamor-0] > [role="img"] {
  fill: #fff;
}

.glamor-1,
[data-glamor-1] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #db2929;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-1 *,
[data-glamor-1] *,
.glamor-1 *::before,
[data-glamor-1] *::before,
.glamor-1 *::after,
[data-glamor-1] *::after {
  box-sizing: inherit;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr,
.glamor-1 > span,
[data-glamor-1] > span {
  font-size: 1.125em;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr {
  text-decoration: none;
}

.glamor-1 > img,
[data-glamor-1] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-1 > [role="img"],
[data-glamor-1] > [role="img"] {
  fill: #fff;
}

.glamor-2,
[data-glamor-2] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #d92762;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-2 *,
[data-glamor-2] *,
.glamor-2 *::before,
[data-glamor-2] *::before,
.glamor-2 *::after,
[data-glamor-2] *::after {
  box-sizing: inherit;
}

.glamor-2 > abbr,
[data-glamor-2] > abbr,
.glamor-2 > span,
[data-glamor-2] > span {
  font-size: 1.125em;
}

.glamor-2 > abbr,
[data-glamor-2] > abbr {
  text-decoration: none;
}

.glamor-2 > img,
[data-glamor-2] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-2 > [role="img"],
[data-glamor-2] > [role="img"] {
  fill: #fff;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #9545d8;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3 > abbr,
[data-glamor-3] > abbr,
.glamor-3 > span,
[data-glamor-3] > span {
  font-size: 1.125em;
}

.glamor-3 > abbr,
[data-glamor-3] > abbr {
  text-decoration: none;
}

.glamor-3 > img,
[data-glamor-3] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-3 > [role="img"],
[data-glamor-3] > [role="img"] {
  fill: #fff;
}

.glamor-4,
[data-glamor-4] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #4c4ce0;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-4 *,
[data-glamor-4] *,
.glamor-4 *::before,
[data-glamor-4] *::before,
.glamor-4 *::after,
[data-glamor-4] *::after {
  box-sizing: inherit;
}

.glamor-4 > abbr,
[data-glamor-4] > abbr,
.glamor-4 > span,
[data-glamor-4] > span {
  font-size: 1.125em;
}

.glamor-4 > abbr,
[data-glamor-4] > abbr {
  text-decoration: none;
}

.glamor-4 > img,
[data-glamor-4] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-4 > [role="img"],
[data-glamor-4] > [role="img"] {
  fill: #fff;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2f9fe0;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-6 > abbr,
[data-glamor-6] > abbr,
.glamor-6 > span,
[data-glamor-6] > span {
  font-size: 1.125em;
}

.glamor-6 > abbr,
[data-glamor-6] > abbr {
  text-decoration: none;
}

.glamor-6 > img,
[data-glamor-6] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-6 > [role="img"],
[data-glamor-6] > [role="img"] {
  fill: #1d1f24;
}

.glamor-7,
[data-glamor-7] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #20baa3;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-7 *,
[data-glamor-7] *,
.glamor-7 *::before,
[data-glamor-7] *::before,
.glamor-7 *::after,
[data-glamor-7] *::after {
  box-sizing: inherit;
}

.glamor-7 > abbr,
[data-glamor-7] > abbr,
.glamor-7 > span,
[data-glamor-7] > span {
  font-size: 1.125em;
}

.glamor-7 > abbr,
[data-glamor-7] > abbr {
  text-decoration: none;
}

.glamor-7 > img,
[data-glamor-7] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-7 > [role="img"],
[data-glamor-7] > [role="img"] {
  fill: #1d1f24;
}

.glamor-8,
[data-glamor-8] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #1fc06f;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-8 *,
[data-glamor-8] *,
.glamor-8 *::before,
[data-glamor-8] *::before,
.glamor-8 *::after,
[data-glamor-8] *::after {
  box-sizing: inherit;
}

.glamor-8 > abbr,
[data-glamor-8] > abbr,
.glamor-8 > span,
[data-glamor-8] > span {
  font-size: 1.125em;
}

.glamor-8 > abbr,
[data-glamor-8] > abbr {
  text-decoration: none;
}

.glamor-8 > img,
[data-glamor-8] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-8 > [role="img"],
[data-glamor-8] > [role="img"] {
  fill: #1d1f24;
}

.glamor-9,
[data-glamor-9] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #81d42f;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9 *,
[data-glamor-9] *,
.glamor-9 *::before,
[data-glamor-9] *::before,
.glamor-9 *::after,
[data-glamor-9] *::after {
  box-sizing: inherit;
}

.glamor-9 > abbr,
[data-glamor-9] > abbr,
.glamor-9 > span,
[data-glamor-9] > span {
  font-size: 1.125em;
}

.glamor-9 > abbr,
[data-glamor-9] > abbr {
  text-decoration: none;
}

.glamor-9 > img,
[data-glamor-9] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-9 > [role="img"],
[data-glamor-9] > [role="img"] {
  fill: #1d1f24;
}

.glamor-10,
[data-glamor-10] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #e3a322;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-10 *,
[data-glamor-10] *,
.glamor-10 *::before,
[data-glamor-10] *::before,
.glamor-10 *::after,
[data-glamor-10] *::after {
  box-sizing: inherit;
}

.glamor-10 > abbr,
[data-glamor-10] > abbr,
.glamor-10 > span,
[data-glamor-10] > span {
  font-size: 1.125em;
}

.glamor-10 > abbr,
[data-glamor-10] > abbr {
  text-decoration: none;
}

.glamor-10 > img,
[data-glamor-10] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-10 > [role="img"],
[data-glamor-10] > [role="img"] {
  fill: #1d1f24;
}

.glamor-11,
[data-glamor-11] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #e05b2b;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-11 *,
[data-glamor-11] *,
.glamor-11 *::before,
[data-glamor-11] *::before,
.glamor-11 *::after,
[data-glamor-11] *::after {
  box-sizing: inherit;
}

.glamor-11 > abbr,
[data-glamor-11] > abbr,
.glamor-11 > span,
[data-glamor-11] > span {
  font-size: 1.125em;
}

.glamor-11 > abbr,
[data-glamor-11] > abbr {
  text-decoration: none;
}

.glamor-11 > img,
[data-glamor-11] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-11 > [role="img"],
[data-glamor-11] > [role="img"] {
  fill: #1d1f24;
}

.glamor-12,
[data-glamor-12] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #8e99ab;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-12 *,
[data-glamor-12] *,
.glamor-12 *::before,
[data-glamor-12] *::before,
.glamor-12 *::after,
[data-glamor-12] *::after {
  box-sizing: inherit;
}

.glamor-12 > abbr,
[data-glamor-12] > abbr,
.glamor-12 > span,
[data-glamor-12] > span {
  font-size: 1.125em;
}

.glamor-12 > abbr,
[data-glamor-12] > abbr {
  text-decoration: none;
}

.glamor-12 > img,
[data-glamor-12] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-12 > [role="img"],
[data-glamor-12] > [role="img"] {
  fill: #1d1f24;
}

.glamor-13,
[data-glamor-13] {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #598296;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-13 *,
[data-glamor-13] *,
.glamor-13 *::before,
[data-glamor-13] *::before,
.glamor-13 *::after,
[data-glamor-13] *::after {
  box-sizing: inherit;
}

.glamor-13 > abbr,
[data-glamor-13] > abbr,
.glamor-13 > span,
[data-glamor-13] > span {
  font-size: 1.125em;
}

.glamor-13 > abbr,
[data-glamor-13] > abbr {
  text-decoration: none;
}

.glamor-13 > img,
[data-glamor-13] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-13 > [role="img"],
[data-glamor-13] > [role="img"] {
  fill: #1d1f24;
}

.glamor-14,
[data-glamor-14] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #596387;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-14 *,
[data-glamor-14] *,
.glamor-14 *::before,
[data-glamor-14] *::before,
.glamor-14 *::after,
[data-glamor-14] *::after {
  box-sizing: inherit;
}

.glamor-14 > abbr,
[data-glamor-14] > abbr,
.glamor-14 > span,
[data-glamor-14] > span {
  font-size: 1.125em;
}

.glamor-14 > abbr,
[data-glamor-14] > abbr {
  text-decoration: none;
}

.glamor-14 > img,
[data-glamor-14] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-14 > [role="img"],
[data-glamor-14] > [role="img"] {
  fill: #fff;
}

.glamor-15,
[data-glamor-15] {
  box-sizing: border-box;
  color: hsl(322,71%,27%);
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: rgba(139,231,172,0.8);
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-15 *,
[data-glamor-15] *,
.glamor-15 *::before,
[data-glamor-15] *::before,
.glamor-15 *::after,
[data-glamor-15] *::after {
  box-sizing: inherit;
}

.glamor-15 > abbr,
[data-glamor-15] > abbr,
.glamor-15 > span,
[data-glamor-15] > span {
  font-size: 1.125em;
}

.glamor-15 > abbr,
[data-glamor-15] > abbr {
  text-decoration: none;
}

.glamor-15 > img,
[data-glamor-15] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-15 > [role="img"],
[data-glamor-15] > [role="img"] {
  fill: hsl(322,71%,27%);
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Avatar": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-16"
              >
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-0"
                    >
                      <abbr
                        title="Theme  "
                      >
                        T
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="red"
                >
                  <Avatar
                    background="red"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-1"
                    >
                      <abbr
                        title="Red    "
                      >
                        R
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="magenta"
                >
                  <Avatar
                    background="magenta"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-2"
                    >
                      <abbr
                        title="Magenta"
                      >
                        M
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="purple"
                >
                  <Avatar
                    background="purple"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-3"
                    >
                      <abbr
                        title="Purple "
                      >
                        P
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="indigo"
                >
                  <Avatar
                    background="indigo"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-4"
                    >
                      <abbr
                        title="Indigo "
                      >
                        I
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="blue"
                >
                  <Avatar
                    background="blue"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-0"
                    >
                      <abbr
                        title="Blue   "
                      >
                        B
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="sky"
                >
                  <Avatar
                    background="sky"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-6"
                    >
                      <abbr
                        title="Sky    "
                      >
                        S
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="teal"
                >
                  <Avatar
                    background="teal"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-7"
                    >
                      <abbr
                        title="Teal   "
                      >
                        T
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="green"
                >
                  <Avatar
                    background="green"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-8"
                    >
                      <abbr
                        title="Green  "
                      >
                        G
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="lime"
                >
                  <Avatar
                    background="lime"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-9"
                    >
                      <abbr
                        title="Lime   "
                      >
                        L
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="yellow"
                >
                  <Avatar
                    background="yellow"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-10"
                    >
                      <abbr
                        title="Yellow "
                      >
                        Y
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="orange"
                >
                  <Avatar
                    background="orange"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-11"
                    >
                      <abbr
                        title="Orange "
                      >
                        O
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="gray"
                >
                  <Avatar
                    background="gray"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-12"
                    >
                      <abbr
                        title="Gray   "
                      >
                        G
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="slate"
                >
                  <Avatar
                    background="slate"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-13"
                    >
                      <abbr
                        title="Slate  "
                      >
                        S
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="dusk"
                >
                  <Avatar
                    background="dusk"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-14"
                    >
                      <abbr
                        title="Dusk   "
                      >
                        D
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  background="rgba(139,231,172,0.8)"
                  color="hsl(322,71%,27%)"
                >
                  <Avatar
                    background="rgba(139,231,172,0.8)"
                    color="hsl(322,71%,27%)"
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-15"
                    >
                      <abbr
                        title="Custom"
                      >
                        C
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Avatar demo examples custom-text-abbr 1`] = `
.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr,
.glamor-0 > span,
[data-glamor-0] > span {
  font-size: 1.125em;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr {
  text-decoration: none;
}

.glamor-0 > img,
[data-glamor-0] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-0 > [role="img"],
[data-glamor-0] > [role="img"] {
  fill: #fff;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Avatar": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <Avatar
              abbr="B"
            >
              <Avatar
                icon={undefined}
                noBackground={undefined}
                shape="circle"
                size="large"
              >
                <span
                  className="glamor-0"
                >
                  <abbr
                    title="Dr. Bernard Johnson"
                  >
                    B
                  </abbr>
                </span>
              </Avatar>
            </Avatar>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Avatar demo examples shapes 1`] = `
.glamor-3 > *,
[data-glamor-3] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr,
.glamor-0 > span,
[data-glamor-0] > span {
  font-size: 1.125em;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr {
  text-decoration: none;
}

.glamor-0 > img,
[data-glamor-0] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-0 > [role="img"],
[data-glamor-0] > [role="img"] {
  fill: #fff;
}

.glamor-1,
[data-glamor-1] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 0.1875em;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-1 *,
[data-glamor-1] *,
.glamor-1 *::before,
[data-glamor-1] *::before,
.glamor-1 *::after,
[data-glamor-1] *::after {
  box-sizing: inherit;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr,
.glamor-1 > span,
[data-glamor-1] > span {
  font-size: 1.125em;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr {
  text-decoration: none;
}

.glamor-1 > img,
[data-glamor-1] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-1 > [role="img"],
[data-glamor-1] > [role="img"] {
  fill: #fff;
}

.glamor-2,
[data-glamor-2] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-2 *,
[data-glamor-2] *,
.glamor-2 *::before,
[data-glamor-2] *::before,
.glamor-2 *::after,
[data-glamor-2] *::after {
  box-sizing: inherit;
}

.glamor-2 > abbr,
[data-glamor-2] > abbr,
.glamor-2 > span,
[data-glamor-2] > span {
  font-size: 1.125em;
}

.glamor-2 > abbr,
[data-glamor-2] > abbr {
  text-decoration: none;
}

.glamor-2 > img,
[data-glamor-2] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-2 > [role="img"],
[data-glamor-2] > [role="img"] {
  fill: #fff;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Avatar": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-3"
              >
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-0"
                    >
                      <abbr
                        title="Circle"
                      >
                        C
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  shape="rounded"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="rounded"
                    size="large"
                  >
                    <span
                      className="glamor-1"
                    >
                      <abbr
                        title="Rounded"
                      >
                        R
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  shape="square"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="square"
                    size="large"
                  >
                    <span
                      className="glamor-2"
                    >
                      <abbr
                        title="Square"
                      >
                        S
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Avatar demo examples sizes 1`] = `
.glamor-16 > *,
[data-glamor-16] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.glamor-8,
[data-glamor-8] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-8 *,
[data-glamor-8] *,
.glamor-8 *::before,
[data-glamor-8] *::before,
.glamor-8 *::after,
[data-glamor-8] *::after {
  box-sizing: inherit;
}

.glamor-8 > abbr,
[data-glamor-8] > abbr,
.glamor-8 > span,
[data-glamor-8] > span {
  font-size: 1.125em;
}

.glamor-8 > abbr,
[data-glamor-8] > abbr {
  text-decoration: none;
}

.glamor-8 > img,
[data-glamor-8] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-8 > [role="img"],
[data-glamor-8] > [role="img"] {
  fill: #fff;
}

.glamor-9,
[data-glamor-9] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9 *,
[data-glamor-9] *,
.glamor-9 *::before,
[data-glamor-9] *::before,
.glamor-9 *::after,
[data-glamor-9] *::after {
  box-sizing: inherit;
}

.glamor-9 > abbr,
[data-glamor-9] > abbr,
.glamor-9 > span,
[data-glamor-9] > span {
  font-size: 1.125em;
}

.glamor-9 > abbr,
[data-glamor-9] > abbr {
  text-decoration: none;
}

.glamor-9 > img,
[data-glamor-9] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-9 > [role="img"],
[data-glamor-9] > [role="img"] {
  fill: #fff;
}

.glamor-11,
[data-glamor-11] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-11 *,
[data-glamor-11] *,
.glamor-11 *::before,
[data-glamor-11] *::before,
.glamor-11 *::after,
[data-glamor-11] *::after {
  box-sizing: inherit;
}

.glamor-11 > abbr,
[data-glamor-11] > abbr {
  text-decoration: none;
}

.glamor-11 > img,
[data-glamor-11] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-11 > [role="img"],
[data-glamor-11] > [role="img"] {
  fill: #fff;
}

.glamor-10,
[data-glamor-10] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr,
.glamor-0 > span,
[data-glamor-0] > span {
  font-size: 0.6875em;
}

.glamor-0 > abbr,
[data-glamor-0] > abbr {
  text-decoration: none;
}

.glamor-0 > img,
[data-glamor-0] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-0 > [role="img"],
[data-glamor-0] > [role="img"] {
  fill: #fff;
}

.glamor-1,
[data-glamor-1] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-1 *,
[data-glamor-1] *,
.glamor-1 *::before,
[data-glamor-1] *::before,
.glamor-1 *::after,
[data-glamor-1] *::after {
  box-sizing: inherit;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr,
.glamor-1 > span,
[data-glamor-1] > span {
  font-size: 0.6875em;
}

.glamor-1 > abbr,
[data-glamor-1] > abbr {
  text-decoration: none;
}

.glamor-1 > img,
[data-glamor-1] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-1 > [role="img"],
[data-glamor-1] > [role="img"] {
  fill: #fff;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3 > abbr,
[data-glamor-3] > abbr {
  text-decoration: none;
}

.glamor-3 > img,
[data-glamor-3] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-3 > [role="img"],
[data-glamor-3] > [role="img"] {
  fill: #fff;
}

.glamor-2,
[data-glamor-2] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.glamor-4,
[data-glamor-4] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-4 *,
[data-glamor-4] *,
.glamor-4 *::before,
[data-glamor-4] *::before,
.glamor-4 *::after,
[data-glamor-4] *::after {
  box-sizing: inherit;
}

.glamor-4 > abbr,
[data-glamor-4] > abbr,
.glamor-4 > span,
[data-glamor-4] > span {
  font-size: 0.875em;
}

.glamor-4 > abbr,
[data-glamor-4] > abbr {
  text-decoration: none;
}

.glamor-4 > img,
[data-glamor-4] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-4 > [role="img"],
[data-glamor-4] > [role="img"] {
  fill: #fff;
}

.glamor-5,
[data-glamor-5] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-5 *,
[data-glamor-5] *,
.glamor-5 *::before,
[data-glamor-5] *::before,
.glamor-5 *::after,
[data-glamor-5] *::after {
  box-sizing: inherit;
}

.glamor-5 > abbr,
[data-glamor-5] > abbr,
.glamor-5 > span,
[data-glamor-5] > span {
  font-size: 0.875em;
}

.glamor-5 > abbr,
[data-glamor-5] > abbr {
  text-decoration: none;
}

.glamor-5 > img,
[data-glamor-5] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-5 > [role="img"],
[data-glamor-5] > [role="img"] {
  fill: #fff;
}

.glamor-7,
[data-glamor-7] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-7 *,
[data-glamor-7] *,
.glamor-7 *::before,
[data-glamor-7] *::before,
.glamor-7 *::after,
[data-glamor-7] *::after {
  box-sizing: inherit;
}

.glamor-7 > abbr,
[data-glamor-7] > abbr {
  text-decoration: none;
}

.glamor-7 > img,
[data-glamor-7] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-7 > [role="img"],
[data-glamor-7] > [role="img"] {
  fill: #fff;
}

.glamor-12,
[data-glamor-12] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-12 *,
[data-glamor-12] *,
.glamor-12 *::before,
[data-glamor-12] *::before,
.glamor-12 *::after,
[data-glamor-12] *::after {
  box-sizing: inherit;
}

.glamor-12 > abbr,
[data-glamor-12] > abbr,
.glamor-12 > span,
[data-glamor-12] > span {
  font-size: 1.125em;
}

.glamor-12 > abbr,
[data-glamor-12] > abbr {
  text-decoration: none;
}

.glamor-12 > img,
[data-glamor-12] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-12 > [role="img"],
[data-glamor-12] > [role="img"] {
  fill: #fff;
}

.glamor-13,
[data-glamor-13] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-13 *,
[data-glamor-13] *,
.glamor-13 *::before,
[data-glamor-13] *::before,
.glamor-13 *::after,
[data-glamor-13] *::after {
  box-sizing: inherit;
}

.glamor-13 > abbr,
[data-glamor-13] > abbr,
.glamor-13 > span,
[data-glamor-13] > span {
  font-size: 1.125em;
}

.glamor-13 > abbr,
[data-glamor-13] > abbr {
  text-decoration: none;
}

.glamor-13 > img,
[data-glamor-13] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-13 > [role="img"],
[data-glamor-13] > [role="img"] {
  fill: #fff;
}

.glamor-15,
[data-glamor-15] {
  box-sizing: border-box;
  color: #fff;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  align-items: center;
  background-color: #2e6fd9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-15 *,
[data-glamor-15] *,
.glamor-15 *::before,
[data-glamor-15] *::before,
.glamor-15 *::after,
[data-glamor-15] *::after {
  box-sizing: inherit;
}

.glamor-15 > abbr,
[data-glamor-15] > abbr {
  text-decoration: none;
}

.glamor-15 > img,
[data-glamor-15] > img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

.glamor-15 > [role="img"],
[data-glamor-15] > [role="img"] {
  fill: #fff;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Avatar": [Function],
            "DemoLayout": [Function],
            "IconCloud": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-16"
              >
                <Avatar
                  size="small"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={true}
                    shape="circle"
                    size="small"
                  >
                    <span
                      className="glamor-0"
                    >
                      <img
                        alt="Sam"
                        src="/images/avatar.svg"
                      />
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="small"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="small"
                  >
                    <span
                      className="glamor-1"
                    >
                      <abbr
                        title="Sam"
                      >
                        S
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="small"
                >
                  <Avatar
                    icon={
                      <IconCloud
                        size="medium"
                        title="cloud"
                      />
                    }
                    noBackground={undefined}
                    shape="circle"
                    size="small"
                  >
                    <span
                      className="glamor-3"
                    >
                      <IconCloud
                        size="medium"
                        title="cloud"
                      >
                        <Icon
                          rtl={false}
                          size="medium"
                          title="cloud"
                        >
                          <glamorous(svg)
                            aria-hidden={null}
                            aria-labelledby="icon-title-icon-2"
                            role="img"
                            rtl={false}
                            size="medium"
                            viewBox="0 0 24 24"
                          >
                            <svg
                              aria-hidden={null}
                              aria-labelledby="icon-title-icon-2"
                              className="glamor-2"
                              role="img"
                              viewBox="0 0 24 24"
                            >
                              <title
                                id="icon-title-icon-2"
                              >
                                cloud
                              </title>
                              <g>
                                <path
                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                />
                              </g>
                            </svg>
                          </glamorous(svg)>
                        </Icon>
                      </IconCloud>
                    </span>
                  </Avatar>
                </Avatar>
                <br />
                <Avatar
                  size="medium"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={true}
                    shape="circle"
                    size="medium"
                  >
                    <span
                      className="glamor-4"
                    >
                      <img
                        alt="Melissa"
                        src="/images/avatar.svg"
                      />
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="medium"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="medium"
                  >
                    <span
                      className="glamor-5"
                    >
                      <abbr
                        title="Melissa"
                      >
                        M
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="medium"
                >
                  <Avatar
                    icon={
                      <IconCloud
                        size="medium"
                        title="cloud"
                      />
                    }
                    noBackground={undefined}
                    shape="circle"
                    size="medium"
                  >
                    <span
                      className="glamor-7"
                    >
                      <IconCloud
                        size="medium"
                        title="cloud"
                      >
                        <Icon
                          rtl={false}
                          size="medium"
                          title="cloud"
                        >
                          <glamorous(svg)
                            aria-hidden={null}
                            aria-labelledby="icon-title-icon-3"
                            role="img"
                            rtl={false}
                            size="medium"
                            viewBox="0 0 24 24"
                          >
                            <svg
                              aria-hidden={null}
                              aria-labelledby="icon-title-icon-3"
                              className="glamor-2"
                              role="img"
                              viewBox="0 0 24 24"
                            >
                              <title
                                id="icon-title-icon-3"
                              >
                                cloud
                              </title>
                              <g>
                                <path
                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                />
                              </g>
                            </svg>
                          </glamorous(svg)>
                        </Icon>
                      </IconCloud>
                    </span>
                  </Avatar>
                </Avatar>
                <br />
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={true}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-8"
                    >
                      <img
                        alt="Larry"
                        src="/images/avatar.svg"
                      />
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar>
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-9"
                    >
                      <abbr
                        title="Larry"
                      >
                        L
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar>
                  <Avatar
                    icon={
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      />
                    }
                    noBackground={undefined}
                    shape="circle"
                    size="large"
                  >
                    <span
                      className="glamor-11"
                    >
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      >
                        <Icon
                          rtl={false}
                          size="1.5em"
                          title="cloud"
                        >
                          <glamorous(svg)
                            aria-hidden={null}
                            aria-labelledby="icon-title-icon-4"
                            role="img"
                            rtl={false}
                            size="1.5em"
                            viewBox="0 0 24 24"
                          >
                            <svg
                              aria-hidden={null}
                              aria-labelledby="icon-title-icon-4"
                              className="glamor-10"
                              role="img"
                              viewBox="0 0 24 24"
                            >
                              <title
                                id="icon-title-icon-4"
                              >
                                cloud
                              </title>
                              <g>
                                <path
                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                />
                              </g>
                            </svg>
                          </glamorous(svg)>
                        </Icon>
                      </IconCloud>
                    </span>
                  </Avatar>
                </Avatar>
                <br />
                <Avatar
                  size="jumbo"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={true}
                    shape="circle"
                    size="jumbo"
                  >
                    <span
                      className="glamor-12"
                    >
                      <img
                        alt="Jennifer"
                        src="/images/avatar.svg"
                      />
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="jumbo"
                >
                  <Avatar
                    icon={undefined}
                    noBackground={undefined}
                    shape="circle"
                    size="jumbo"
                  >
                    <span
                      className="glamor-13"
                    >
                      <abbr
                        title="Jennifer"
                      >
                        J
                      </abbr>
                    </span>
                  </Avatar>
                </Avatar>
                <Avatar
                  size="jumbo"
                >
                  <Avatar
                    icon={
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      />
                    }
                    noBackground={undefined}
                    shape="circle"
                    size="jumbo"
                  >
                    <span
                      className="glamor-15"
                    >
                      <IconCloud
                        size="1.5em"
                        title="cloud"
                      >
                        <Icon
                          rtl={false}
                          size="1.5em"
                          title="cloud"
                        >
                          <glamorous(svg)
                            aria-hidden={null}
                            aria-labelledby="icon-title-icon-5"
                            role="img"
                            rtl={false}
                            size="1.5em"
                            viewBox="0 0 24 24"
                          >
                            <svg
                              aria-hidden={null}
                              aria-labelledby="icon-title-icon-5"
                              className="glamor-10"
                              role="img"
                              viewBox="0 0 24 24"
                            >
                              <title
                                id="icon-title-icon-5"
                              >
                                cloud
                              </title>
                              <g>
                                <path
                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                />
                              </g>
                            </svg>
                          </glamorous(svg)>
                        </Icon>
                      </IconCloud>
                    </span>
                  </Avatar>
                </Avatar>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
